syntax = "proto3";

package hr.edu.edu_class;


service HrEduClassService {
  rpc searchEduClassTree (HrEduClassSearchRequest) returns (Response);
  rpc getEduClass (HrEduClassRequest) returns (Response);
  rpc auEduClass (HrEduClassRequest) returns (Response);
  rpc deleteEduClass (HrEduClassRequest) returns (Response);
}


message HrEduClassSearch {
  int32 ClassNo = 1;
}

message HrEduClassResult {
  string IdxNo = 1;
  int32 EduClassSeq = 2;
  string EduClassName = 3;
  int32 UMEduHighClass = 4;
  string UMEduHighClassName = 5;
  int32 UMEduMidClass = 6;
  string UMEduMidClassName = 7;
  string EduGoal = 8;
  string EduAppRange = 9;
  string Remark = 10;
  int32 EduCompeSeq = 11;
  string EduCompeName = 12;
  int32 DispSeq = 13;
  string status = 14;
}

message HrEduClassSearchRequest {
  repeated HrEduClassSearch result = 1;  
  map<string, string> metadata = 2;
}
message HrEduClassRequest {
  repeated HrEduClassResult result = 1;  
  map<string, string> metadata = 2;
}


message Response {
  bool success = 1;  
  string message = 2;      
  string data = 3; 
  string errors = 4;
}